$NetBSD: CHANGES-2014,v 1.1808 2014/05/10 15:19:40 nonaka Exp $

Changes to the packages collection and infrastructure in 2014:

	Updated games/supertuxkart to 0.8.1 [ryoon 2014-01-01]
	Updated devel/libgetopt to 1.4.5 [ryoon 2014-01-01]
	Added devel/p5-Data-GUID version 0.048 [ryoon 2014-01-01]
	Added devel/p5-Role-Basic version 0.13 [ryoon 2014-01-01]
	Added devel/p5-Symbol-Global-Name version 0.04 [ryoon 2014-01-01]
	Added mail/p5-Email-Address-List version 0.01 [ryoon 2014-01-01]
	Added security/p5-Crypt-X509 version 0.51 [ryoon 2014-01-01]
	Added time/p5-Date-Extract version 0.04 [ryoon 2014-01-01]
	Updated misc/p5-Locale-Maketext-Fuzzy to 0.11 [ryoon 2014-01-01]
	Updated devel/rt4 to 4.2.1 [ryoon 2014-01-01]
	Updated textproc/mdoclint to 1.25 [jnemeth 2014-01-01]
	Updated devel/patch to 2.7.1 [ryoon 2014-01-01]
	Added devel/py-newt version 0.52.16 [ryoon 2014-01-01]
	Added misc/byobu version 5.69 [ryoon 2014-01-01]
	Updated textproc/cabocha to 0.67 [obache 2014-01-01]
	Updated textproc/p5-cabocha to 0.67 [obache 2014-01-01]
	Updated textproc/py-cabocha to 0.67 [obache 2014-01-01]
	Updated textproc/ruby-cabocha to 0.67 [obache 2014-01-01]
	Updated textproc/groonga to 3.1.1 [obache 2014-01-01]
	Updated devel/p5-Import-Into to 1.002000 [wen 2014-01-01]
	Updated devel/p5-Sub-Exporter-Progressive to 0.001011 [wen 2014-01-01]
	Updated devel/git to 1.8.5.2 [adam 2014-01-01]
	Updated devel/git-base to 1.8.5.2 [adam 2014-01-01]
	Updated devel/git-docs to 1.8.5.2 [adam 2014-01-01]
	Updated www/gitweb to 1.8.5.2 [adam 2014-01-01]
	Updated security/libgcrypt to 1.6.0 [wiz 2014-01-01]
	Updated news/pan to 0.139nb13 [wiz 2014-01-01]
	Updated editors/OmegaT to 3.0.8.01 [ryoon 2014-01-01]
	Updated devel/p5-Devel-GlobalDestruction to 0.12 [wen 2014-01-01]
	Updated devel/p5-Moo to 1.004002 [wen 2014-01-01]
	Updated security/py-passlib to 1.6.2 [kleink 2014-01-01]
	Updated www/py-flask-wtf to 0.9.4 [kleink 2014-01-01]
	Updated www/py-flask-login to 0.2.9 [kleink 2014-01-01]